--- a/public/assets/styles/styless.css
+++ b/public/assets/styles/styless.css
@@ -117,6 +117,7 @@ header nav {
 
 header nav li {
     margin: 0 25px;
+    font-size: x-large;
 
 }
 
@@ -352,6 +353,15 @@ header nav li:last-child {
     padding: 100px 100px;
 
 }
+footeru{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-color: #FFFFFF;
+    padding: 100px 100px;
+
+}
 .register form input {
     padding: 10px;
     flex: 1;
@@ -363,12 +373,26 @@ header nav li:last-child {
     padding: 10px 10px;
 
 }
+
+
+.login form input {
+    padding: 10px;
+    flex: 1;
+    margin-right: 30px;
+    font-size: 18px;
+    color: #555;
+}
+.login form .btn {
+    padding: 10px 10px;
+
+}
 .contact form .btn {
     padding: 18px 42px;
 }
 
 header nav li .btn {
     padding: 10px 10px;
+    font-size: medium;
 }
 /* Footer Section */
 
@@ -378,7 +402,7 @@ footer {
     align-items: center;
     text-align: center;
     color: #fff;
-    background-color: #1554A9;
+    background-color: #0051C7;
     padding: 60px 0;
 }
 
@@ -414,5 +438,48 @@ footer p a {
 @media (max-width: 700px) {
     footer {
         padding: 80px 15px;
+    }
+}
+
+
+.doctors  {
+    background-color: #F7F7F7;
+}
+
+.doctors  .grid li {
+    padding: 0 30px;
+    flex-basis: 33%;
+    text-align: center;
+}
+
+.doctors  .grid li i {
+    font-size: 50px;
+    color: #2196F3;
+    margin-bottom: 25px;
+}
+
+.doctors  .grid li h4 {
+    color: #555;
+    font-size: 20px;
+    margin-bottom: 25px;
+}
+
+.doctors  .grid li p {
+    margin: 0;
+}
+
+@media (max-width: 1000px) {
+    .doctors .grid li {
+        flex-basis: 70%;
+        margin-bottom: 65px;
+    }
+    .doctors .grid li:last-child {
+        margin-bottom: 0;
+    }
+}
+
+@media (max-width: 600px) {
+    .doctors  .grid li {
+        flex-basis: 100%;
     }
 }
