--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -1,4 +1,5 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,500;0,600;1,500;1,900&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css');
 /* General Common Styles */
 
 * {
@@ -107,7 +108,7 @@ header {
 }
 
 header h2 {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Roboto Light';
 }
 
 header nav {
